<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBarDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewLeague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="liga"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDateMatchDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Tanggal"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageHomeTeamDetail"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/textViewHomeTeamDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="HomeTeam"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewHomeScore"
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="VS"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/textViewAwayScore"
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="32sp" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageAwayTeamDetail"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/textViewAwayTeamDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="HomeTeam"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textViewGoalHomeTeamDetail"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="Pencetak Gol Home" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Goals"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textViewGoalAwayTeamDetail"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Pencetak Gol Away" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/ll_shots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewShotsHomeTeamDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="-"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewShots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/shots" />

                <TextView
                    android:id="@+id/textViewShotsAwayTeamDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="-" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Lineups"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_GK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGKHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/textViewGKs"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gk"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewGKAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Defense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDefendersHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />


                <TextView
                    android:id="@+id/textViewDefenders"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/defender"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewDefendersAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Midfields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMidefieldsHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />


                <TextView
                    android:id="@+id/textViewMidefields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewMidefieldsAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Forwards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewForwardsHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />


                <TextView
                    android:id="@+id/textViewForwards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewForwardsAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Subtitutions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewSubtitutionsHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />


                <TextView
                    android:id="@+id/textViewSubtitutions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/substitution"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewSubtitutionsAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_YellowCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewYellowCardHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start" />


                <TextView
                    android:id="@+id/textViewYellowCards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yellow"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewYellowCardAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_RedCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRedCardsHomeTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="-" />

                <TextView
                    android:id="@+id/textViewRedCards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/red"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewRedCardsAwayTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="-" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>